fix: bash 복붙 안정성·정확성 점검 반영 (5병렬 검증)
- 🔴 module5 Step3-2 펜스 4-backtick (중첩 ``` 렌더·복사 깨짐)
- ch10 -Xlog:'gc*' zsh nomatch 수정(3곳), deploy 하드코딩 경로→플레이스홀더
- deploy firebase 대화형 3블록 분리, project-docs REPL 블록 text 재라벨
- prerequisites A-3 npm create 분리, module3/4 cd 추가, module5 maxdepth 3

Co-Authored-By: Claude Opus 4.8 (1M context) <noreply@anthropic.com>